# clinical-query-agent

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
config/: agents.yaml  settings.py
data/: __init__.py
data/synthetic/: dm.csv  generate_synthetic.py  ground_truth_anomalies.json  vs_anomalous.csv  vs_clean.csv
evaluation/: benchmarks.py  metrics.py  run_eval.py
scripts/: demo.py  download_public_data.py  ingest_protocols.py  run_pipeline.py
src/: __init__.py
src/agents/: __init__.py  base.py  crf_design.py  data_cleaning.py  edc_config.py  programming.py  query_generation.py  supervisor.py
src/audit/: trail.py
src/graph/: __init__.py  pipeline.py  state.py
src/models/: clinical.py  schemas.py
src/rag/: __init__.py  indexer.py  reranker.py  retriever.py
src/tools/: cdisc_tools.py  data_tools.py  validation_tools.py
src/utils/: helpers.py
tests/: conftest.py  test_agents.py  test_audit.py  test_pipeline.py  test_rag.py
